@@ -4,6 +4,10 @@ Version 1.3-2, March 2, 2011
     * Typo in rng.type argument of snowWrapper fixed.
     * plotClusterSize: col arg is reordered according to
       balancing type.
+    * dcoptions "single.par.model" added for writing
+      single or multiple model files (e.g. for shared memory
+      vs. grid/cluster situations). Implemented in
+      jags.parfit and dc.parfit.
 
 Version 1.3-1, January 4, 2011
     * JASA paper (Lele et al. 2010) citation added to Rd.
